--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Learn Nav Drawer Fragment</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 </resources>
